  and confusing global variables. (RFB)

2012-08-25
- aes/gemfmlib.c aes/gemwmlib.c: Code cleanup: removed OB_ & related
  macros. (RFB)

2012-08-28
- aes/gemrslib.c: Reverted most recent changes which caused crashes in many
  programs including QED & TeraDesk. (RFB)

2012-08-29
- bios/kprint.c bios/vt52.c bios/vt52.h: Fixed crash when dopanic() is called
  before vt52 is initialized. (VRI)
- include/kprint.h: Safer dopanic() prototype. (VRI)
- bios/screen.c: Initialize the VBL interrupt handler before using vsync().
- aes/gemfslib.c: Fix regression in handling paths longer than the directory
  line. (RFB)
- aes/gemfslib.c: Code cleanup: eliminate compatibility macros. (RFB)
- aes/gemfslib.c: Do not try to maintain slider position between file
  selector calls (simpler & more Atari-like). (RFB)
- aes/gemfslib.c: Code cleanup: eliminate LEN_FTITLE and remove unneeded
  arguments to fs_newdir(). (RFB)
- bios/screen.c bios/startup.S: Workaround for Hatari which does not disable the
  MFP interrupts after a RESET instruction. This fixes the RAM versions. (VRI)
- aes/gemfslib.c: Speed up redraw of file selector drive buttons. (RFB)
- aes/gemlib.h: Code cleanup: deleted some macros that were duplicates of
  macros in crysbind.h. (RFB)

2012-08-30
- bios/bios.c: Fixed memory leak after running the early console. (VRI)
- aes/crysbind.h aes/gem.def aes/gem.rsc aes/gemfslib.c aes/gemfslib.h
  aes/gemsuper.c: Implemented fsel_exinput() function. (RFB)
- aes/gemsuper.c include/config.h: Make appl_init() return AES version as
  1.40 since we now support fsel_exinput(). (RFB)

2012-08-31
- aes/gemshlib.c: Factorized aes_run_rom_program(). (VRI)
- aes/gemfslib.c: Code cleanup: simplify & eliminate variables. (RFB)
- aes/gemfslib.c util/string.c: Fix bug: allow file selector mask to be
  lengthened. (RFB)

2012-09-01
- bios/screen.c bios/videl.c: Added vsync() to avoid the plane shift bug when
  changing the resolution on ST. (VRI)